--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "diasexercicio-next",
+  "name": "pomodoro-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "js-cookie": "^2.2.1",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1"
